Set up blank pages

--- a/frontend/profile.html
+++ b/frontend/profile.html
@@ -34,39 +34,7 @@
         </div>
       </nav>
 
-    <h3><b>Dashboard</b></h3>
-
-    <div class="container">
-        <!-- left side -->
-        <div class="left-column">
-            <h2>Set Daily Calorie Target</h2>
-            <form id="calorieForm">
-                <input type="number" id="calorieTarget" placeholder="Daily Calorie Target" min="1" required />
-                <button type="button" onclick="setCalorieTarget()">Set Target</button>
-            </form>
-
-            <h2>Log Food</h2>
-            <form id="foodForm">
-                <input type="text" id="foodName" placeholder="Food Name" required />
-                <input type="number" id="foodCalories" placeholder="Calories" min="1" required />
-                <button type="button" onclick="logFood()">Log Food</button>
-            </form>
-        </div>
-
-        <!-- right side -->
-        <div class="right-column">
-            <h2>Calorie Intake</h2>
-            <div class="calorie-stats">
-                <p><b>Total Calories Consumed:</b> <span id="totalCalories"></span></p>
-                <p><b>Percentage of Daily Target:</b> <span id="caloriePercentage">Set a target to see percentage</span></p>
-            </div>
-            <div class="food-log-container">
-                <h2>Food Log</h2>
-                <ul id="foodList"></ul>
-            </div>
-            
-        </div>
-    </div>
-    <script src="static/main.js"></script>
-</body>
-</html>
+      <h1>Profile Page</h1>
+    </body>
+    
+    </html>
