Displaying daily calorie target under calorie intake

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -57,6 +57,7 @@
         <div class="right-column">
             <h2>Calorie Intake</h2>
             <div class="calorie-stats">
+                <p><b>Daily Calorie Target:</b> <span id="dailyTarget">Not Set</span></p>
                 <p><b>Total Calories Consumed:</b> <span id="totalCalories"></span></p>
                 <p><b>Percentage of Daily Target:</b> <span id="caloriePercentage">Set a target to see percentage</span></p>
             </div>
