Recipe in modal displays - need to create function in main.js

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -85,8 +85,13 @@
                         <h6><b>Percentage of Daily Target:</b></h6>
                         <p id="modalFoodPercentage"></p>
                     </div>
+                    <div class="mb-3">
+                      <h6><b>Recipe (optional):</b></h6>
+                      <textarea id="modalFoodRecipe" rows="4" class="form-control"></textarea>
+                  </div>                  
                 </div>
                 <div class="modal-footer">
+                    <button type="button" class="btn btn-success" id="saveRecipeButton">Save Recipe</button>
                     <button type="button" class="btn btn-primary" id="modalEditButton">Edit</button>
                 </div>
             </div>
