--- a/frontend/index.html
+++ b/frontend/index.html
@@ -31,6 +31,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="/login">Login</a>
                     </li>
+                    <button onclick="logout()" id="logoutButton"
+                        style="position: absolute; top: 10px; right: 10px;">Sign Out</button>
+
                 </ul>
             </div>
         </div>
@@ -105,6 +108,17 @@
             </div>
         </div>
     </div>
+    <script> // logout function
+        function logout() {
+            localStorage.removeItem("token");
+            window.location.href = "/login"; // Redirect to login page
+        }
+    </script>
+    <script> // check if token exists before allowing user access
+        if (!localStorage.getItem("token")) {
+            window.location.href = "/login"; // Force back to login if no token
+        }
+    </script>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
     <script src="static/main.js"></script>
