--- a/frontend/login.html
+++ b/frontend/login.html
@@ -3,30 +3,46 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>NutriTrack Login</title>
+    <title>NutriTrack Login / Sign Up</title>
     <link rel="stylesheet" href="/static/styles.css">
 </head>
 
 <body>
 
     <div class="container">
-        <h2>Login to NutriTrack</h2>
-        <form id="loginForm">
+        <h2 id="formTitle">Login to NutriTrack</h2>
+
+        <form id="authForm">
             <input type="text" id="username" placeholder="Username" required />
             <input type="password" id="password" placeholder="Password" required />
-            <button type="submit">Login</button>
+            <button type="submit" id="authButton">Login</button>
         </form>
-        <p id="loginMessage"></p>
+
+        <p id="toggleMessage">Don't have an account? <a href="#" id="toggleLink">Sign up</a></p>
+        <p id="authMessage"></p>
     </div>
 
     <script>
-        document.getElementById("loginForm").addEventListener("submit", async function (e) {
+        let isLogin = true; // track whether we are in login or signup mode
+
+        document.getElementById("toggleLink").addEventListener("click", function (e) {
+            e.preventDefault();
+            isLogin = !isLogin;
+            document.getElementById("formTitle").textContent = isLogin ? "Login to NutriTrack" : "Sign Up for NutriTrack";
+            document.getElementById("authButton").textContent = isLogin ? "Login" : "Sign Up";
+            document.getElementById("toggleMessage").innerHTML = isLogin
+                ? "Don't have an account? <a href=\"#\" id=\"toggleLink\">Sign up</a>"
+                : "Already have an account? <a href=\"#\" id=\"toggleLink\">Login</a>";
+        });
+
+        document.getElementById("authForm").addEventListener("submit", async function (e) {
             e.preventDefault();
 
             const username = document.getElementById("username").value;
             const password = document.getElementById("password").value;
+            const endpoint = isLogin ? "/login" : "/signup";
 
-            const response = await fetch("/login", {
+            const response = await fetch(endpoint, {
                 method: "POST",
                 headers: { "Content-Type": "application/json" },
                 body: JSON.stringify({ username, password })
@@ -35,10 +51,30 @@
             const data = await response.json();
 
             if (response.ok) {
-                localStorage.setItem("token", data.access_token);
-                window.location.href = "/"; // redirect to dashboard
+                if (isLogin) {
+                    localStorage.setItem("token", data.access_token);
+                    window.location.href = "/"; // redirect to dashboard
+                } else {
+                    document.getElementById("authMessage").textContent = "Signup successful! You can now log in.";
+                    isLogin = true;
+                    document.getElementById("formTitle").textContent = "Login to NutriTrack";
+                    document.getElementById("authButton").textContent = "Login";
+                }
             } else {
-                document.getElementById("loginMessage").textContent = data.detail || "Login failed";
+                document.getElementById("authMessage").textContent = data.detail || "Authentication failed";
+            }
+        });
+
+        // Important: reattach event listener when toggle happens
+        document.addEventListener("click", function (e) {
+            if (e.target && e.target.id === "toggleLink") {
+                e.preventDefault();
+                isLogin = !isLogin;
+                document.getElementById("formTitle").textContent = isLogin ? "Login to NutriTrack" : "Sign Up for NutriTrack";
+                document.getElementById("authButton").textContent = isLogin ? "Login" : "Sign Up";
+                document.getElementById("toggleMessage").innerHTML = isLogin
+                    ? "Don't have an account? <a href=\"#\" id=\"toggleLink\">Sign up</a>"
+                    : "Already have an account? <a href=\"#\" id=\"toggleLink\">Login</a>";
             }
         });
     </script>
