--- a/frontend/login.html
+++ b/frontend/login.html
@@ -4,22 +4,32 @@
 <head>
     <meta charset="UTF-8">
     <title>NutriTrack Login / Sign Up</title>
-    <link rel="stylesheet" href="/static/styles.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 
-<body>
+<body class="bg-light d-flex justify-content-center align-items-center vh-100">
 
-    <div class="container">
-        <h2 id="formTitle">Login to NutriTrack</h2>
+    <div class="card shadow-lg p-4" style="max-width: 400px; width: 100%;">
+        <div class="card-body">
+            <h2 id="formTitle" class="text-center mb-4">Login to NutriTrack</h2>
 
-        <form id="authForm">
-            <input type="text" id="username" placeholder="Username" required />
-            <input type="password" id="password" placeholder="Password" required />
-            <button type="submit" id="authButton">Login</button>
-        </form>
+            <form id="authForm">
+                <div class="mb-3">
+                    <input type="text" id="username" class="form-control" placeholder="Username" required />
+                </div>
+                <div class="mb-3">
+                    <input type="password" id="password" class="form-control" placeholder="Password" required />
+                </div>
+                <div class="d-grid">
+                    <button type="submit" id="authButton" class="btn btn-primary">Login</button>
+                </div>
+            </form>
 
-        <p id="toggleMessage">Don't have an account? <a href="#" id="toggleLink">Sign up</a></p>
-        <p id="authMessage"></p>
+            <p id="toggleMessage" class="text-center mt-3">
+                Don't have an account? <a href="#" id="toggleLink">Sign up</a>
+            </p>
+            <p id="authMessage" class="text-center text-danger mt-2"></p>
+        </div>
     </div>
 
     <script>
@@ -64,7 +74,7 @@
                 document.getElementById("authMessage").textContent = data.detail || "Authentication failed";
             }
         });
-
+        
         // Important: reattach event listener when toggle happens
         document.addEventListener("click", function (e) {
             if (e.target && e.target.id === "toggleLink") {
