--- a/frontend/goals.html
+++ b/frontend/goals.html
@@ -27,6 +27,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="/profile">Profile</a>
                     </li>
+                    <li class="nav-item">
+                        <button onclick="logout()" class="btn btn-outline-danger btn-sm ms-2" id="logoutButton">Sign Out</button>
+                    </li>
                 </ul>
             </div>
         </div>
@@ -34,5 +37,5 @@
 
     <h1>Goals Page</h1>
 </body>
-
 </html>
+<script src="static/main.js"></script>
