--- a/frontend/profile.html
+++ b/frontend/profile.html
@@ -29,6 +29,9 @@
               <li class="nav-item">
                 <a class="nav-link" href="/profile">Profile</a>
               </li>
+              <li class="nav-item">
+                <button onclick="logout()" class="btn btn-outline-danger btn-sm ms-2" id="logoutButton">Sign Out</button>
+            </li>
             </ul>
           </div>
         </div>
@@ -38,3 +41,4 @@
     </body>
     
     </html>
+    <script src="static/main.js"></script>
