--- a/frontend/recipes.html
+++ b/frontend/recipes.html
@@ -14,7 +14,7 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light w-100 m-0">
         <div class="container-fluid justify-content-between">
-          <a class="navbar-brand" href="#">NutriTrack</a>
+          <a class="navbar-brand" href="/">NutriTrack</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -38,7 +38,7 @@
       </nav>
 
       <h1>Recipes Page</h1>
+      <script src="static/main.js"></script>
+
     </body>
-    
     </html>
-    <script src="static/main.js"></script>
