added the updateFood function to edit existing food

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -12,7 +12,7 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light w-100 m-0">
         <div class="container-fluid justify-content-between">
-            <a class="navbar-brand" href="#">NutriTrack</a>
+            <a class="navbar-brand" href="">NutriTrack</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -49,9 +49,9 @@
             </form>
 
             <h2>Log Food</h2>
-            <form id="foodForm">
+            <form id="foodForm"">
                 <input type="text" id="foodName" placeholder="Food Name" required />
-                <input type="number" id="foodCalories" placeholder="Calories" min="1" required />
+                <input type="number" id="foodCalories" placeholder="Calories" min="0" required />
                 <button type="button" onclick="logFood()">Log Food</button>
             </form>
         </div>
@@ -111,10 +111,39 @@
         if (!localStorage.getItem("token")) {
             window.location.href = "/login"; // Force back to login if no token
         }
+
+    //sets current calorie target in input if exists
+        document.addEventListener('DOMContentLoaded', async () => {
+        const token = localStorage.getItem("token");
+        if (!token) {
+            window.location.href = "/login"; // Redirect to login if no token
+            return;
+        }
+
+        try {
+            const response = await fetch('/calories', {
+                headers: {
+                    'Authorization': 'Bearer ' + token
+                }
+            });
+
+            if (response.ok) {
+                const data = await response.json();
+                if (data.target && data.target > 0) {
+                    document.getElementById('calorieTarget').value = data.target;
+                }
+            } else {
+                console.error('Failed to fetch calorie data:', response.statusText);
+            }
+        } catch (error) {
+            console.error("Error fetching calorie data:", error);
+        }
+    });
     </script>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
     <script src="static/main.js"></script>
+
 </body>
 
 </html>
