--- a/frontend/login.html
+++ b/frontend/login.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>NutriTrack Login / Sign Up</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 
@@ -17,8 +18,11 @@
                 <div class="mb-3">
                     <input type="text" id="username" class="form-control" placeholder="Username" required />
                 </div>
-                <div class="mb-3">
-                    <input type="password" id="password" class="form-control" placeholder="Password" required />
+                <div class="mb-3 position-relative">
+                    <input type="password" id="password" class="form-control pe-5" placeholder="Password" required />
+                    <button type="button"
+                        class="btn btn-sm btn-outline-secondary position-absolute top-50 end-0 translate-middle-y me-2"
+                        onclick="togglePassword()">Show</button>
                 </div>
                 <div class="d-grid">
                     <button type="submit" id="authButton" class="btn btn-primary">Login</button>
@@ -33,16 +37,31 @@
     </div>
 
     <script>
-        let isLogin = true; // track whether we are in login or signup mode
+        let isLogin = true;
 
-        document.getElementById("toggleLink").addEventListener("click", function (e) {
-            e.preventDefault();
-            isLogin = !isLogin;
-            document.getElementById("formTitle").textContent = isLogin ? "Login to NutriTrack" : "Sign Up for NutriTrack";
-            document.getElementById("authButton").textContent = isLogin ? "Login" : "Sign Up";
-            document.getElementById("toggleMessage").innerHTML = isLogin
-                ? "Don't have an account? <a href=\"#\" id=\"toggleLink\">Sign up</a>"
-                : "Already have an account? <a href=\"#\" id=\"toggleLink\">Login</a>";
+        function togglePassword() {
+            const passwordInput = document.getElementById("password");
+            const toggleButton = event.target;
+
+            if (passwordInput.type === "password") {
+                passwordInput.type = "text";
+                toggleButton.textContent = "Hide";
+            } else {
+                passwordInput.type = "password";
+                toggleButton.textContent = "Show";
+            }
+        }
+
+        document.addEventListener("click", function (e) {
+            if (e.target && e.target.id === "toggleLink") {
+                e.preventDefault();
+                isLogin = !isLogin;
+                document.getElementById("formTitle").textContent = isLogin ? "Login to NutriTrack" : "Sign Up for NutriTrack";
+                document.getElementById("authButton").textContent = isLogin ? "Login" : "Sign Up";
+                document.getElementById("toggleMessage").innerHTML = isLogin
+                    ? "Don't have an account? <a href=\"#\" id=\"toggleLink\">Sign up</a>"
+                    : "Already have an account? <a href=\"#\" id=\"toggleLink\">Login</a>";
+            }
         });
 
         document.getElementById("authForm").addEventListener("submit", async function (e) {
@@ -63,7 +82,7 @@
             if (response.ok) {
                 if (isLogin) {
                     localStorage.setItem("token", data.access_token);
-                    window.location.href = "/"; // redirect to dashboard
+                    window.location.href = "/";
                 } else {
                     document.getElementById("authMessage").textContent = "Signup successful! You can now log in.";
                     isLogin = true;
@@ -74,20 +93,13 @@
                 document.getElementById("authMessage").textContent = data.detail || "Authentication failed";
             }
         });
-        
-        // Important: reattach event listener when toggle happens
-        document.addEventListener("click", function (e) {
-            if (e.target && e.target.id === "toggleLink") {
-                e.preventDefault();
-                isLogin = !isLogin;
-                document.getElementById("formTitle").textContent = isLogin ? "Login to NutriTrack" : "Sign Up for NutriTrack";
-                document.getElementById("authButton").textContent = isLogin ? "Login" : "Sign Up";
-                document.getElementById("toggleMessage").innerHTML = isLogin
-                    ? "Don't have an account? <a href=\"#\" id=\"toggleLink\">Sign up</a>"
-                    : "Already have an account? <a href=\"#\" id=\"toggleLink\">Login</a>";
-            }
-        });
     </script>
+
+    <style>
+        input[type="password"].form-control.pe-5 {
+            padding-right: 3.5rem;
+        }
+    </style>
 
 </body>
 
