--- a/frontend/recipes.html
+++ b/frontend/recipes.html
@@ -7,6 +7,7 @@
   <title>Calorie Tracker - Recipes</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" />
   <link rel="stylesheet" href="/static/styles.css" />
+  <link rel="stylesheet" href="/static/navbar.css" />
   <style>
     /* Override styles that might affect the centering */
     body {
