--- a/frontend/goals.html
+++ b/frontend/goals.html
@@ -31,7 +31,7 @@
                     </li>
                     <li class="nav-item d-none" id="adminNavItem">
                         <a class="nav-link" href="/admin">Admin</a>
-                    </li>
+                    </li>  
                     <li class="nav-item">
                         <button onclick="logout()" class="btn btn-outline-danger btn-sm" id="logoutButton">Sign
                             Out</button>
@@ -205,6 +205,7 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="/static/main.js"></script>
     <script src="/static/goals.js"></script>
 </body>
 
